# SeqFlash

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SeqFlash_DEVELOPMENT_PLAN.md  USER_GUIDE.md  deny.toml
.github/workflows/: release.yml  windows.yml
apps/seqflash-app/: Cargo.toml  build.rs
apps/seqflash-app/src/: app.rs  main.rs
apps/seqflash-app/src/app/: mod.rs  ui.rs
benches/seqflash-bench/: Cargo.toml
benches/seqflash-bench/benches/: indexing.rs  parsing.rs  rendering.rs  searching.rs
benches/seqflash-bench/src/: lib.rs
crates/seqflash-document/: Cargo.toml
crates/seqflash-document/src/: bytes.rs  document.rs  error.rs  lib.rs  list.rs
crates/seqflash-document/tests/: stress_lifecycle.rs
crates/seqflash-formats/: Cargo.toml
crates/seqflash-formats/src/: detect.rs  fasta.rs  fastq.rs  lib.rs
crates/seqflash-formats/tests/: proptest_formats.rs
crates/seqflash-index/: Cargo.toml
crates/seqflash-index/src/: fasta_index.rs  fastq_index.rs  lib.rs
crates/seqflash-index/tests/: stress_index.rs
crates/seqflash-jobs/: Cargo.toml
crates/seqflash-jobs/src/: lib.rs
crates/seqflash-ops/: Cargo.toml
crates/seqflash-ops/src/: convert.rs  export.rs  fastq_stats.rs  filter.rs  lib.rs  overlay.rs  overlay_export.rs  stats.rs  transform.rs
crates/seqflash-ops/tests/: proptest_overlay.rs
crates/seqflash-platform-windows/: Cargo.toml
crates/seqflash-platform-windows/src/: lib.rs
crates/seqflash-search/: Cargo.toml
crates/seqflash-search/src/: engine.rs  lib.rs  types.rs
crates/seqflash-settings/: Cargo.toml
crates/seqflash-settings/src/: lib.rs
crates/seqflash-types/: Cargo.toml
crates/seqflash-types/src/: lib.rs
crates/seqflash-viewer/: Cargo.toml
crates/seqflash-viewer/src/: formatting.rs  lib.rs  line_index.rs
crates/seqflash-viewer/tests/: stress_render.rs
docs/: README.md
docs/milestones/: M7_ACCEPTANCE.md  M8_ACCEPTANCE.md
docs/performance/: methodology.md
docs/performance/results/: LARGE_FILE_MEASUREMENT_TEMPLATE.md  bench-env-20260717-221019.txt  criterion-20260717-221019.md  large-file-20260717-skeleton.md
fuzz/: README.md
fuzz/seqflash-fuzz/: Cargo.toml
fuzz/seqflash-fuzz/src/: fuzz_detect.rs  fuzz_fasta_header.rs  fuzz_fastq.rs
scripts/: add_m6_methods.py  benchmark.ps1  generate-large-fasta.ps1  package-portable.ps1  register-file-assoc.ps1
