[package]
name = "seqflash-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "SeqFlash Windows desktop application"

# Hide the console window in release builds; keep it in debug for log visibility.
[[bin]]
name = "seqflash-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
rfd = { workspace = true }
seqflash-document = { workspace = true }
seqflash-formats = { workspace = true }
seqflash-index = { workspace = true }
seqflash-ops = { workspace = true }
seqflash-types = { workspace = true }
seqflash-viewer = { workspace = true }
seqflash-settings = { workspace = true }
