[package]
name = "seqflash-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Document lifecycle, read-only mmap, and edit overlay (placeholder)"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
