[package]
name = "seqflash-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Document lifecycle, read-only memory mapping, and edit overlay"

[lints]
workspace = true

[dependencies]
memmap2 = { workspace = true }
seqflash-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
