[package]
name = "seqflash-formats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "FASTA/FASTQ detection, parsing, and validation"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
