[package]
name = "seqflash-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "FASTA/FASTQ record boundary indexing and line checkpoints (placeholder)"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
