[package]
name = "seqflash-jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Background job tokens: cancel, progress, and revision gating"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
