[package]
name = "seqflash-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Sequence statistics and lightweight record operations (placeholder)"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
