[package]
name = "seqflash-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Sequence statistics and lightweight record operations"

[lints]
workspace = true

[dependencies]
seqflash-formats = { workspace = true }
seqflash-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
