[package]
name = "seqflash-platform-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Windows-specific paths, file association, DPI, and system integration (placeholder)"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
