[package]
name = "seqflash-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Record-ID, byte, and sequence search (placeholder)"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
