[package]
name = "seqflash-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Record-ID, byte, and sequence search"

[lints]
workspace = true

[dependencies]
memchr = { workspace = true }
seqflash-types = { workspace = true }
