[package]
name = "seqflash-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "User settings and persistence for SeqFlash"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
seqflash-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
