[package]
name = "seqflash-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Virtual-scrolling text/record viewer (placeholder)"

[lints]
workspace = true

[dependencies]
seqflash-types = { workspace = true }
