[package]
name = "seqflash-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Virtual-scrolling text/record viewer"

[lints]
workspace = true

[dependencies]
eframe = { workspace = true }
seqflash-document = { workspace = true }
seqflash-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
